feature: add lat / lon to display

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
             <ul>
               {results.map((item) => {
-                return <li>{item.name}</li>;
+                return <li>{item.name} - {item.latitude}, {item.longitude}</li>;
               })}
             </ul>
 
